OBJECTS-FILES/Task1/namespces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techmart-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: techmart-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: techmart-prod
