OBJECTS-FILES/Task1/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: techmart-dev
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: nginx
        image: nginx:1.21

        ports:
        - containerPort: 80
  
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"      

        volumeMounts:
        - name: config-volume
          mountPath: /app/config

      volumes:
      - name: config-volume
        configMap:
          name: backend-config 

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
