OBJECTS-FILES/Task1/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-service
spec:
  selector:
    app: db
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: db
spec:
  serviceName: mysql-headless-service
  replicas: 1
  selector: 
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql-db
        image: mysql:8.0
        ports:
        - containerPort: 3306
        
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"

        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql

      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
