OBJECTS-FILES/Task1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techmart-ingress
  namespace: techmart-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - techmart.local
    secretName: techmart-tls

  rules:
  - host: techmart.local

    http:

      paths:

      - path: /shop
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 8080
